# Novel-IDE

./: LICENSE  README.md  branding.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: AI_INTEGRATION_IMPLEMENTATION.md  BUILD_TROUBLESHOOTING.md  CHARACTER_HOVER_TESTING.md  CHECKPOINT_8_AI_INTEGRATION_VERIFICATION.md  MARKDOWN_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  SENSITIVE_WORD_CONFIG_UI.md  sensitive-word-hover.md
scripts/: README.md  clean-build.ps1  clean-build.sh  sync-branding.mjs
src/: App.css  App.tsx  branding.ts  index.css  tauri.ts  tauriChat.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_system.rs  agents.rs  ai_types.rs  app_data.rs  app_settings.rs  book_split.rs  branding.rs  chat_history.rs  commands.rs  main.rs  secrets.rs  state.rs
src-tauri/src/mcp/: mod.rs
src-tauri/src/skills/: mod.rs
src/components/: BookAnalyzer.css  BookAnalyzer.tsx  ChapterManager.tsx  DiffReviewPanel.css  DiffReviewPanel.tsx  FileExplorer.css  FileExplorer.tsx  Notification.css  Notification.tsx  PlotLineManager.css  PlotLineManager.tsx  PlotLineVisualization.css  PlotLineVisualization.tsx  SkillPanel.css  SkillPanel.tsx  StatsPanel.css  StatsPanel.tsx  TabBar.css  TabBar.tsx  Timeline.css  Timeline.tsx  Welcome.css  Welcome.tsx  WritingGoalPanel.css  WritingGoalPanel.tsx
src/contexts/: EditorContext.tsx
src/hooks/: README.md  useKeyBindings.ts  useSensitiveWordDetection.ts
src/providers/: SensitiveWordHoverProvider.ts  ThemeProvider.tsx
src/services/: EditorConfigManager.ts  EditorManager.ts  PlotLineService.ts  SensitiveWordService.ts  WritingGoalService.ts  (+1 more)
(+8 files in other folders)
