[package]
name = "novel-ide"
version = "0.1.0"
description = "Novel-IDE"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.5"

[package.metadata.tauri]
productName = "Novel-IDE"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
blake3 = "1"
git2 = "0.20"
keyring = "3"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
