[package]
name = "novel-ide"
version = "0.1.0"
description = "Novel-IDE"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }
ico = "0.5"

[package.metadata.tauri]
productName = "Novel-IDE"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
blake3 = "1"
git2 = "0.20"
base64 = "0.22"
tauri-plugin-dialog = "2.6.0"
notify = "6.1.1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_System_Memory"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1









